updated function to process user arguments to query_impala

--- a/query_impala..ipynb
+++ b/query_impala..ipynb
@@ -133,7 +133,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "AND (p7_platform.wgs_illumina_variant.testing = 'TRT1' OR p7_platform.wgs_illumina_variant.testing = 'HOXB1')\n"
+        "AND (p7_platform.wgs_illumina_variant.testing LIKE 'HOX%' OR p7_platform.wgs_illumina_variant.testing LIKE 'SOX%')\nAND (p7_platform.wgs_illumina_variant.testing = 'HOXB1' OR p7_platform.wgs_illumina_variant.testing = 'SOXB1')\n"
        ]
       }
      ],
@@ -159,28 +159,37 @@
       "    return user_args, wildcards         \n",
       "\n",
       "#function to turn user args into query statements\n",
-      "def process_args(arg_list, name_arg):\n",
+      "def process_args(arg_list, wild_list, name_arg):\n",
       "    # if there is only one user arg\n",
       "    if len(arg_list) == 1:\n",
       "        reg_args=  'AND {0}.{1} = '.format(search_db,name_arg) + \"'\" + \", \".join(str(e) for e in arg_list) + \"'\"\n",
       "    #if there are more than on user arguments\n",
-      "    if len(arg_list) > 1:\n",
+      "    elif len(arg_list) > 1:\n",
       "        conditions = ['{0}.{1} = '.format(search_db,name_arg) + \"'\" + s + \"'\" for s in arg_list]\n",
       "        reg_args = \"AND (\" + \" OR \".join(map(str, conditions)) + \")\"\n",
+      "    # if there is only one user arg\n",
+      "    elif len(wild_list) == 1:\n",
+      "        wild_args=  'AND {0}.{1} LIKE '.format(search_db,name_arg) + \"'\" + \", \".join(str(e) for e in wild_list) + \"'\"\n",
+      "    #if there are more than on user arguments\n",
+      "    elif len(wild_list) > 1:\n",
+      "        conditions = ['{0}.{1} LIKE '.format(search_db,name_arg) + \"'\" + s + \"'\" for s in wild_list]\n",
+      "        wild_args = \"AND (\" + \" OR \".join(map(str, conditions)) + \")\"\n",
+      "    return wild_args\n",
       "    return reg_args\n",
       "\n",
-      " \n",
-      "test_args = ['TRT1','HOXB1']\n",
+      "wild_test = ['HOX%','SOX%']\n",
+      "genes_test = ['HOXB1','SOXB1']\n",
+      "test = process_args(genes_test, wild_test, \"testing\")\n",
       "\n",
-      "testing = process_args(test_args, \"testing\")\n",
       "\n",
-      "print testing\n",
+      "print wild_queries\n",
+      "print genes_queries\n",
       "\n",
       "\n",
       "#placeholder"
      ],
      "language": "python",
-     "prompt_number": 146
+     "prompt_number": 153
     }
    ]
   }
