added function to merge together final query

--- a/query_impala..ipynb
+++ b/query_impala..ipynb
@@ -455,7 +455,7 @@
       "subject_query = create_query(subject_id,\"sample_id\", search_db)\n",
       "\n",
       "#create genes argument\n",
-      "genes_query = create_query(genes,\"sample_id\", annot_db)\n",
+      "genes_query = create_query(genes,\"gene_name\", annot_db)\n",
       "\n",
       "#create genotype argument\n",
       "gt_query = create_query(gt,\"gt\", search_db)\n",
@@ -464,7 +464,7 @@
       "chrom_query = create_query(chrom,\"chrom\", search_db)"
      ],
      "language": "python",
-     "prompt_number": 256
+     "prompt_number": 264
     },
     {
      "cell_type": "heading",
@@ -478,11 +478,44 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [],
-     "input": [
-      ""
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[\"WHERE ((public_hg19.clinvar.gene_name = 'BRCA1' OR public_hg19.clinvar.gene_name = 'TRT1') OR (public_hg19.clinvar.gene_name LIKE 'SON%' OR public_hg19.clinvar.gene_name LIKE 'HOX%'))\", \"WHERE p7_platform.wgs_illumina_variant.gt = 'hom'\", \"WHERE p7_platform.wgs_illumina_variant.chrom = '8'\"]\n"
+       ]
+      }
      ],
-     "language": "python"
+     "input": [
+      "# For all query arguments that are not empty \n",
+      "# add to query\n",
+      "# first one gets \"WHERE\" instead of \"AND\"\n",
+      "# check annot_db to see if pos or start/stop\n",
+      "# return specified columns\n",
+      "# either left join or inner join\n",
+      "\n",
+      "#list to store final query object\n",
+      "final_query = []\n",
+      "\n",
+      "#merge query arguments\n",
+      "def merge_query(query_arg):\n",
+      "    if len(query_arg) > 0:\n",
+      "        final_query.append(query_arg)\n",
+      " \n",
+      "#create list to apply function on   \n",
+      "query_list = [member_query, subject_query, genes_query, gt_query,chrom_query]\n",
+      "\n",
+      "#apply function to list of query statements\n",
+      "for query in query_list:\n",
+      "    merge_query(query)\n",
+      "\n",
+      "#create final impala query, replacing first item with WHERE instead of AND\n",
+      "impala_query = [query.replace('AND', 'WHERE', 1) for query in final_query]   \n",
+      "print impala_query"
+     ],
+     "language": "python",
+     "prompt_number": 278
     }
    ]
   }
