added function to merge all query statements

--- a/query_impala..ipynb
+++ b/query_impala..ipynb
@@ -436,7 +436,7 @@
      "metadata": {},
      "level": 3,
      "source": [
-      "Run function on user arguments"
+      "Create combined user argument"
      ]
     },
     {
@@ -461,7 +461,25 @@
       "gt_query = create_query(gt,\"gt\", search_db)\n",
       "\n",
       "#create chromosome argument\n",
-      "chrom_query = create_query(chrom,\"chrom\", search_db)"
+      "chrom_query = create_query(chrom,\"chrom\", search_db)\n",
+      "\n",
+      "#list to store final query object\n",
+      "final_query = []\n",
+      "\n",
+      "#merge query arguments\n",
+      "def merge_query(query_arg):\n",
+      "    if len(query_arg) > 0:\n",
+      "        final_query.append(query_arg)\n",
+      " \n",
+      "#create list to apply function on   \n",
+      "query_list = [member_query, subject_query, genes_query, gt_query,chrom_query]\n",
+      "\n",
+      "#apply function to list of query statements\n",
+      "for query in query_list:\n",
+      "    merge_query(query)\n",
+      "\n",
+      "#create final impala query, replacing first item with WHERE instead of AND\n",
+      "impala_query= str(final_query).replace('AND', 'WHERE', 1)"
      ],
      "language": "python",
      "prompt_number": 264
@@ -483,7 +501,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[\"WHERE ((public_hg19.clinvar.gene_name = 'BRCA1' OR public_hg19.clinvar.gene_name = 'TRT1') OR (public_hg19.clinvar.gene_name LIKE 'SON%' OR public_hg19.clinvar.gene_name LIKE 'HOX%'))\", \"WHERE p7_platform.wgs_illumina_variant.gt = 'hom'\", \"WHERE p7_platform.wgs_illumina_variant.chrom = '8'\"]\n"
+        "[\"WHERE ((public_hg19.clinvar.gene_name = 'BRCA1' OR public_hg19.clinvar.gene_name = 'TRT1') OR (public_hg19.clinvar.gene_name LIKE 'SON%' OR public_hg19.clinvar.gene_name LIKE 'HOX%'))\", \"AND p7_platform.wgs_illumina_variant.gt = 'hom'\", \"AND p7_platform.wgs_illumina_variant.chrom = '8'\"]\n"
        ]
       }
      ],
@@ -495,27 +513,10 @@
       "# return specified columns\n",
       "# either left join or inner join\n",
       "\n",
-      "#list to store final query object\n",
-      "final_query = []\n",
-      "\n",
-      "#merge query arguments\n",
-      "def merge_query(query_arg):\n",
-      "    if len(query_arg) > 0:\n",
-      "        final_query.append(query_arg)\n",
-      " \n",
-      "#create list to apply function on   \n",
-      "query_list = [member_query, subject_query, genes_query, gt_query,chrom_query]\n",
-      "\n",
-      "#apply function to list of query statements\n",
-      "for query in query_list:\n",
-      "    merge_query(query)\n",
-      "\n",
-      "#create final impala query, replacing first item with WHERE instead of AND\n",
-      "impala_query = [query.replace('AND', 'WHERE', 1) for query in final_query]   \n",
-      "print impala_query"
+      "\n"
      ],
      "language": "python",
-     "prompt_number": 278
+     "prompt_number": 283
     }
    ]
   }
